src/objects/Fund_Allocation__c.object
<CustomObject>
    <description>A link between a Service Costs and an Income Block for a Financial Year</description>
    <fields>
        <fullName>Allocation_Amount__c</fullName>
        <description>The amount of funds allocated from the source to the service funding requirement</description>
        <label>Allocation Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDR_Name__c</fullName>
        <formula>Income_Block_Period__r.Income_Block__r.BDR__r.Name</formula>
        <label>BDR Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <formula>Text(Funding_Requirement__r.Fiscal_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Requirement__c</fullName>
        <label>Funding Requirement</label>
        <referenceTo>Funding_Requirement__c</referenceTo>
        <relationshipName>Fund_Allocation_Records</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IBP_Fiscal_Year__c</fullName>
        <formula>text(Income_Block_Period__r.Fiscal_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IBP_Fiscal_Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Block_Period__c</fullName>
        <label>Income Block Period</label>
        <referenceTo>Income_Block_Period__c</referenceTo>
        <relationshipName>Fund_Allocation_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Finance_Activity_Code__c</fullName>
        <formula>Funding_Requirement__r.Service__r.service_financeactivitycode__c</formula>
        <label>Service Finance Activity Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <formula>Funding_Requirement__r.Service__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Status__c</fullName>
        <formula>TEXT(Funding_Requirement__r.Service__r.service_status__c)</formula>
        <label>Service Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the funding allocation</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BDR Income Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Income_Block_Period__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FAR-{0000}</displayFormat>
        <label>Fund Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BDR income Allocation Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>